# AllayStoneTemplate

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
src/allaystone_template/: __init__.py  plugin.py
