[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "allaystone-template"
version = "0.1.0"
description = "Template Python plugin for AllayStone"
readme = "README.md"
authors = [{ name = "Your Name" }]
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/smartcmd/AllayStoneTemplate"

[project.entry-points.allaystone]
template = "allaystone_template.plugin:TemplatePlugin"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
